Quiz.html reactive finish

--- a/pre-course proyect/index.html
+++ b/pre-course proyect/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Esta página es un test para comprobar tus conocimientos sobre HTML, CSS y JavaScript">
     <link rel="stylesheet" href="css/styles.css"><!--set the styles-->
     <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="js/index.js"></script><!--set the dcript-->
+    <script type="text/javascript" src="js/index.js"></script><!--set the script-->
     <title>¿Cuanto sabes de HTML, CSS y JS?</title><!--set the page title-->
 </head>
 <body><!--set the body of the page-->
