Verification of checed answer and if it´s correct.

--- a/pre-course proyect/pages/quiz.html
+++ b/pre-course proyect/pages/quiz.html
@@ -27,20 +27,20 @@
             <h2 id="radioQuestions">Pregunta</h2>
             <ul>
                 <li>
-                    <input type="radio" id="a" name="answerRadioA">
-                    <label for="radioA" id="radioAnswerA">respuesta 1</label>
+                    <input type="radio" id="a" name="answerRadio">
+                    <label for="a" id="radioAnswerA">respuesta 1</label>
                 </li>
                 <li>
-                    <input type="radio" id="b" name="answerRadioB">
-                    <label for="radioB" id="radioAnswerB">respuesta 2</label>
+                    <input type="radio" id="b" name="answerRadio">
+                    <label for="b" id="radioAnswerB">respuesta 2</label>
                 </li>
                 <li>
-                    <input type="radio" id="c" name="answerRadioC">
-                    <label for="radioC" id="radioAnswerC">respuesta 3</label>
+                    <input type="radio" id="c" name="answerRadio">
+                    <label for="c" id="radioAnswerC">respuesta 3</label>
                 </li>
                 <li>
-                    <input type="radio" id="d" name="answerRadioD">
-                    <label for="radioD" id="radioAnswerD">respuesta 4</label>
+                    <input type="radio" id="d" name="answerRadio">
+                    <label for="d" id="radioAnswerD">respuesta 4</label>
                 </li>
             </ul>
         </div>
@@ -48,20 +48,20 @@
             <h2 id="checkboxQuestions">Pregunta</h2>
             <ul>
                 <li>
-                    <input type="checkbox" id="a" name="answerCheckboxA">
-                    <label for="checkboxA" id="checkboxAnswerA">respuesta 1</label>
+                    <input type="checkbox" id="A" name="answerCheckbox">
+                    <label for="A" id="checkboxAnswerA">respuesta 1</label>
                 </li>
                 <li>
-                    <input type="checkbox" id="b" name="answerCheckboxB">
-                    <label for="checkboxB" id="checkboxAnswerB">respuesta 2</label>
+                    <input type="checkbox" id="B" name="answerCheckbox">
+                    <label for="B" id="checkboxAnswerB">respuesta 2</label>
                 </li>
                 <li>
-                    <input type="checkbox" id="c" name="answerCheckboxC">
-                    <label for="checkboxC" id="checkboxAnswerC">respuesta 3</label>
+                    <input type="checkbox" id="C" name="answerCheckbox">
+                    <label for="C" id="checkboxAnswerC">respuesta 3</label>
                 </li>
                 <li>
-                    <input type="checkbox" id="d" name="answerCheckboxD">
-                    <label for="checkboxD" id="checkboxAnswerD">respuesta 4</label>
+                    <input type="checkbox" id="D" name="answerCheckbox">
+                    <label for="D" id="checkboxAnswerD">respuesta 4</label>
                 </li>
             </ul>
         </div>
@@ -70,14 +70,14 @@
             <li>
                 <select name="answerDropdown" id="dropdownAnswer">
                     <option selected="" value="Default">Seleccione una opción</option>
-                    <option value="dropdownA" id="dropdownAnswerA">respuesta 1</option>
-                    <option value="dropdownB" id="dropdownAnswerB">respuesta 2</option>
-                    <option value="dropdownC" id="dropdownAnswerC">respuesta 3</option>
-                    <option value="dropdownD" id="dropdownAnswerD">respuesta 4</option>
+                    <option value="a" id="dropdownAnswerA">respuesta 1</option>
+                    <option value="b" id="dropdownAnswerB">respuesta 2</option>
+                    <option value="c" id="dropdownAnswerC">respuesta 3</option>
+                    <option value="d" id="dropdownAnswerD">respuesta 4</option>
                 </select>
             </li>
         </div>
-        <button onclick="loadQuiz();">Siguiente</button><!--set the button-->    
+        <button onclick="isAnswerSelect();">Siguiente</button><!--set the button-->    
     </main>
     <footer class="mainFooter"><!--set the footer-->
         <p class="copy">© 2020 Raúl Cátedra Martínez | Todos los derechos reservados</p>
