Results.html done, some changes in responsive.

--- a/pre-course proyect/pages/quiz.html
+++ b/pre-course proyect/pages/quiz.html
@@ -77,7 +77,7 @@
                 </select>
             </li>
         </div>
-        <button onclick="isAnswerSelect();">Siguiente</button><!--set the button-->    
+        <button onclick="isAnswerSelect();" id="button">Siguiente</button><!--set the button-->    
     </main>
     <footer class="mainFooter"><!--set the footer-->
         <p class="copy">© 2020 Raúl Cátedra Martínez | Todos los derechos reservados</p>
