--- a/pre-course proyect/pages/results.html
+++ b/pre-course proyect/pages/results.html
@@ -73,6 +73,6 @@
     <footer class="mainFooter"><!--set the footer-->
         <p class="copy">© 2020 Raúl Cátedra Martínez | Todos los derechos reservados</p>
     </footer>
-    <script type="text/javascript" src="../js/results.js"></script><!--set the script-->
+    <script src="../js/results.js"></script><!--set the script-->
 </body>
 </html>
