--- a/pre-course proyect/index.html
+++ b/pre-course proyect/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head><!--Start html head-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0"><!--set content and scale-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0"><!--set content and scale-->
     <meta name="keywords" content="Form, Quiz, HTML, CSS, JS, JavaScript, Test, Comprueba tus conocimientos"><!--set metadata-->
     <meta name="description" content="Esta página es un test para comprobar tus conocimientos sobre HTML, CSS y JavaScript">
     <link rel="stylesheet" href="css/styles.css"><!--set the styles-->
@@ -16,7 +16,7 @@
     </header>
     <main class="main"><!--set the main part-->
         <form name="startForm" onsubmit="return validation();">
-            <ul>    
+            <ul>
                 <li><label for="nickname">Nombre</label></li>
                 <li><input type="text" name="nickname" id="nickname" class="input"></li>
                 <li><input type="submit" value="Comenzar" class="button"></li>
@@ -26,6 +26,6 @@
     </main>
     <footer class="mainFooter"><!--set the footer-->
         <p class="copy">© 2020 Raúl Cátedra Martínez | Todos los derechos reservados</p>
-    </footer>  
+    </footer>
 </body>
 </html>
