--- a/pre-course proyect/pages/quiz.html
+++ b/pre-course proyect/pages/quiz.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head><!--Start html head-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0"><!--set content and scale-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0l, user-scalable=yes, maximum-scale=3.0, minimum-scale=1.0"><!--set content and scale-->
     <meta name="keywords" content="Form, Quiz, HTML, CSS, JS, JavaScript, Test, Comprueba tus conocimientos"><!--set metadata-->
     <meta name="description" content="Esta página es un test para comprobar tus conocimientos sobre HTML, CSS y JavaScript">
     <link rel="stylesheet" href="../css/styles.css"><!--set the styles-->
